--- a/CodePulse.API/appsettings.json
+++ b/CodePulse.API/appsettings.json
@@ -1,13 +1,17 @@
-
-  {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CodePulseDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;Application Intent=ReadWrite;MultiSubnetFailover=False"
+{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CodePulseDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;Application Intent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "Jwt": {
+    "Key": "wfewifwojeqwi8qw8jqw1201jweoIODLA7771rwj",
+    "Issuer": "http://localhost:5052",
+    "Audience": "http://localhost:4200"
   }
+}
